# prana_weekly_sales

./: .gitignore  application.py  connections.py  main.py  pyproject.toml  reports.py  sales_files.py
